src/objects/Mana_Household__c.object
<CustomObject>
    <fields>
        <fullName>Backyard_Garden_Generates_Surplus__c</fullName>
        <label>Backyard Garden Generates Surplus</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Main_Fertilizer_Type__c</fullName>
        <label>Backyard Garden Main Fertilizer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Compra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega de programas de huertas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trueque</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Monthly_Sales__c</fullName>
        <label>Backyard Garden Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Pest_Control_Method__c</fullName>
        <label>Backyard Garden Pest Control Method</label>
        <picklist>
            <picklistValues>
                <fullName>Biopreparado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Químico</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corrigimiento__c</fullName>
        <label>Corrigimiento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Children_With_Duplicate_Ids__c</fullName>
        <label>Count Children With Duplicate Ids Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District_Correct__c</fullName>
        <formula>substitute( Corrigimiento__c , &quot;_&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fase_de_la_Huerta_Cosecha__c</fullName>
        <formula>if( (Fase_de_la_huerta__c)= &quot;Cosecha&quot;,1,0)</formula>
        <label>Fase de la Huerta Cosecha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fase_de_la_huerta__c</fullName>
        <description>This field get it&apos;s value from the backyard garden stage field on the household production record, whenever a new household production record is created.</description>
        <label>Fase de la huerta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foto__c</fullName>
        <formula>IF(ISBLANK( Photo__c) || ISNULL(Photo__c), &quot;&quot;, IMAGE(Photo__c ,&quot;Profile Picture&quot;, 263, 223))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Backyard_Garden__c</fullName>
        <label>Has_Backyard_Garden</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registered Households</relationshipLabel>
        <relationshipName>Mana_Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_date__c</fullName>
        <label>Last date</label>
        <summarizedField>Mana_Household_Repeatable_Data__c.CreatedDate</summarizedField>
        <summaryForeignKey>Mana_Household_Repeatable_Data__c.Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_production_date__c</fullName>
        <label>Last production date</label>
        <summarizedField>Mana_Household_Production_Record__c.CreatedDate</summarizedField>
        <summaryForeignKey>Mana_Household_Production_Record__c.Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>This lets one set the gps_y coordinate manually. It&apos;s used in the gps_y formula if the linked submission doesn&apos;t have coordinates</description>
        <inlineHelpText>This lets one set the gps_y coordinate manually. It&apos;s used in the gps_y formula if the linked submission doesn&apos;t have coordinates</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>This lets one set the gps_x coordinate manually. It&apos;s used in the gps_x fomula if the linked submission doesn&apos;t have coordinates</description>
        <inlineHelpText>This lets one set the gps_x coordinate manually. It&apos;s used in the gps_x fomula if the linked submission doesn&apos;t have coordinates</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_CD__c</fullName>
        <description>MAx Created Date</description>
        <label>Max_CD</label>
        <summarizedField>Mana_Household_Repeatable_Data__c.CreatedDate</summarizedField>
        <summaryForeignKey>Mana_Household_Repeatable_Data__c.Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Miembros_del_hogar_Correcto__c</fullName>
        <label>Miembros del hogar (Correcto)</label>
        <summaryForeignKey>Mana_Beneficiary__c.Household__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Miembros_del_hogar__c</fullName>
        <label>Miembros del hogar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Municipality_Correct__c</fullName>
        <formula>substitute( Municipio__c  , &quot;_&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipio__c</fullName>
        <label>Municipio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permitir_SMS__c</fullName>
        <label>Permitir SMS</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Region_Correct__c</fullName>
        <formula>substitute(  Region__c , &quot;_&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Submission_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The submission record that was used to create this household (used to set the GPS location information, since it&apos;s got from the submission record)</description>
        <label>Registration Submission Record</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Mana Households</relationshipLabel>
        <relationshipName>Mana_Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sisben_Score__c</fullName>
        <label>Sisben Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Place__c</fullName>
        <label>Survey Place</label>
        <picklist>
            <picklistValues>
                <fullName>Residencia de la familia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro lugar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usa_quimicos__c</fullName>
        <formula>if(text( Backyard_Garden_Pest_Control_Method__c )=&quot;Químico&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usa químicos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vereda__c</fullName>
        <label>Vereda</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zona__c</fullName>
        <label>Zona</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>children_less_than_5__c</fullName>
        <label>children less than 5</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gps_approximation__c</fullName>
        <description>The GPS approximation value from the submission that created this record</description>
        <formula>IF(ISBLANK(Registration_Submission_Record__c),0, Registration_Submission_Record__r.gfsurveys__gps_approximation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>gps approximation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>has_SISBEN__c</fullName>
        <label>has SISBEN</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>neighborhood__c</fullName>
        <label>neighborhood</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__c</fullName>
        <label>signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sisben_nivel_1_y_2__c</fullName>
        <description>Sisbén nivel 1 y 2. Urabano menor a 50 y Rural menor a 45</description>
        <formula>if((Sisben_Score__c)&lt;=45,if((Zona__c)=&quot;Rural&quot;,1,if((Sisben_Score__c)&lt;=50,if((Zona__c)=&quot;Urbano&quot;,1,0),0)),if((Sisben_Score__c)&lt;=50,if((Zona__c)=&quot;Urbano&quot;,1,0),0))</formula>
        <label>Sisbén nivel 1 y 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ultima_toma_de_producci_n__c</fullName>
        <label>Última toma de producción</label>
        <summarizedField>Mana_Household_Production_Record__c.CreatedDate</summarizedField>
        <summaryForeignKey>Mana_Household_Production_Record__c.Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>underage_members__c</fullName>
        <label>underage members</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mana Household</label>
    <listViews>
        <fullName>Mana_Households</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Municipio__c</columns>
        <columns>Vereda__c</columns>
        <columns>Zona__c</columns>
        <columns>Miembros_del_hogar__c</columns>
        <columns>Fase_de_la_huerta__c</columns>
        <columns>Registration_Submission_Record__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Mana Households</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mana_Households_Same_Ids</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Miembros_del_hogar_Correcto__c</columns>
        <columns>Registration_Submission_Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Count_Children_With_Duplicate_Ids__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Count_Children_With_Duplicate_Ids__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>Mana Households_Same_Ids</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mana Households</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>